# CalcApp

./: CMakeLists.txt
CalcApp/: .cproject  .project
CalcApp/Debug/: makefile  objects.mk  sources.mk
CalcApp/Debug/src/: subdir.mk
CalcApp/src/: CalcApp.cpp
CalcComponent/: .cproject  .project  CMakeLists.txt
CalcComponent/cmake/: CalcVersion.cmake  CalcVersion.cmake~
CalcComponent/include/CalcComponent/: CalcEngine.h
CalcComponent/src/: CalcEngine.cpp
